--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -1,117 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/auth.css" />
-    <title>Boostrap Login | Ludiflex</title>
-  </head>
-  <body>
-    <!----------------------- Main Container -------------------------->
 
-    <div
-      class="container d-flex justify-content-center align-items-center min-vh-100"
-    >
-      <!----------------------- Login Container -------------------------->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/auth.css" />
+  <title>Boostrap Login | Ludiflex</title>
+</head>
 
-      <div class="row border rounded-5 p-3 bg-white shadow box-area">
-        <!--------------------------- Left Box ----------------------------->
+<body>
+  <!----------------------- Main Container -------------------------->
 
-        <div
-          class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box"
-          style="background: #103cbe"
-        >
-          <div class="featured-image mb-3">
-            <img src="images/1.png" class="img-fluid" style="width: 250px" />
-          </div>
-          <p
-            class="text-white fs-2"
-            style="
+  <div class="container d-flex justify-content-center align-items-center min-vh-100">
+    <!----------------------- Login Container -------------------------->
+
+    <div class="row border rounded-5 p-3 bg-white shadow box-area">
+      <!--------------------------- Left Box ----------------------------->
+
+      <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box"
+        style="background: #103cbe">
+        <div class="featured-image mb-3">
+          <img src="/images/logo.png" class="img-fluid" style="width: 200px" />
+        </div>
+        <p class="text-white fs-2" style="
               font-family: 'Courier New', Courier, monospace;
               font-weight: 600;
-            "
-          >
-            Be Verified
-          </p>
-          <small
-            class="text-white text-wrap text-center"
-            style="width: 17rem; font-family: 'Courier New', Courier, monospace"
-            >Join experienced Designers on this platform.</small
-          >
-        </div>
+            ">
+          Be Verified
+        </p>
+        <small class="text-white text-wrap text-center"
+          style="width: 17rem; font-family: 'Courier New', Courier, monospace">Join experienced Designers on this
+          platform.</small>
+      </div>
 
-        <!-------------------- ------ Right Box ---------------------------->
+      <!-------------------- ------ Right Box ---------------------------->
 
-        <div class="col-md-6 right-box">
-          <div class="row align-items-center">
-            <div class="header-text mb-4">
-              <h2>Hello,Again</h2>
-              <p>We are happy to have you back.</p>
-            </div>
-            <form
-              action="/user/login"
-              method="POST"
-              
-            >
-              <div class="input-group mb-3">
-                <input
-                  type="text"
-                  class="form-control form-control-lg bg-light fs-6"
-                  placeholder="Email address"
-                  name="username"
-                  id="username"
-                />
-              </div>
-              <div class="input-group mb-1">
-                <input
-                  type="password"
-                  class="form-control form-control-lg bg-light fs-6"
-                  placeholder="Password"
-                  name="password"
-                  id="password"
-                />
-              </div>
-              <div class="input-group mb-5 d-flex justify-content-between">
-                <div class="form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="formCheck"
-                  />
-                  <label for="formCheck" class="form-check-label text-secondary"
-                    ><small>Remember Me</small></label
-                  >
-                </div>
-                <div class="forgot">
-                  <small><a href="#">Forgot Password?</a></small>
-                </div>
-              </div>
-              <div class="input-group mb-3">
-                <button class="btn btn-lg btn-primary w-100 fs-6">Login</button>
-              </div>
-            </form>
+      <div class="col-md-6 right-box">
+        <div class="row align-items-center">
+          <div class="header-text mb-4">
+            <h2>Hello, Again</h2>
+            <p>We are happy to have you back.</p>
+          </div>
+          <form action="/user/login" method="POST">
             <div class="input-group mb-3">
-              <button class="btn btn-lg btn-light w-100 fs-6">
-                <img
-                  src="images/google.png"
-                  style="width: 20px"
-                  class="me-2"
-                /><small>Sign In with Google</small>
-              </button>
+              <input type="email" class="form-control form-control-lg bg-light fs-6" placeholder="Email address"
+                name="username" id="username" />
             </div>
-            <div class="row">
-              <small>Don't have account? <a href="/register">Sign Up</a></small>
+            <div class="input-group mb-1">
+              <input type="password" class="form-control form-control-lg bg-light fs-6" placeholder="Password"
+                name="password" id="password" />
             </div>
+            <div class="input-group mb-5 d-flex justify-content-between">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="formCheck" />
+                <label for="formCheck" class="form-check-label text-secondary"><small>Remember Me</small></label>
+              </div>
+              <div class="forgot">
+                <small><a href="#">Forgot Password?</a></small>
+              </div>
+            </div>
+            <div class="input-group mb-3">
+              <button class="btn btn-lg btn-primary w-100 fs-6">Login</button>
+            </div>
+          </form>
+          <div class="input-group mb-3">
+            <button class="btn btn-lg btn-light w-100 fs-6">
+              <img src="/images/google.png" style="width: 20px" class="me-2" /><small>Sign In with Google</small>
+            </button>
+          </div>
+          <div class="row">
+            <small>Don't have account? <a href="/user/register">Sign Up</a></small>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+
+
+</body>
+
 </html>
