--- a/src/views/product/detailProduct.ejs
+++ b/src/views/product/detailProduct.ejs
@@ -1,4 +1,4 @@
-<form action="/home/product/update/<%= product._id %>" method="post">
+<form method="post" action="/home/product/update/<%= product._id %>?_method=PUT">
     <label for="product_name">product_name:</label>
     <input type="text" id="product_name" name="product_name" value="<%= product.product_name %>" required>
 
@@ -28,6 +28,95 @@
     add option
 </button>
 
+<br>
+
+<label>Color</label>
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th scope="col">color</th>
+            <th scope="col">image</th>
+            <th scope="col">increase_price</th>
+            <th scope="col">action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% for (let color of product.options.colors) {%>
+            <tr>
+                <td>
+                    <%= color.color %>
+                </td>
+                <td>
+                    <img class="option_colors" src=" <%= color.image %>" alt="Error">
+                </td>
+                <td>
+                    <%= color.increase_price %>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-primary">Detail</button>
+                </td>
+            </tr>
+            <% } %>
+    </tbody>
+</table>
+
+
+
+<label>Ram</label>
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th scope="col">size</th>
+            <th scope="col">increase_price</th>
+            <th scope="col">action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% for (let ram of product.options.rams) {%>
+            <tr>
+                <td>
+                    <%= ram.size %>
+                </td>
+
+                <td>
+                    <%= ram.increase_price %>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-primary">Detail</button>
+                </td>
+            </tr>
+            <% } %>
+    </tbody>
+</table>
+
+
+<label>Rom</label>
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th scope="col">size</th>
+            <th scope="col">increase_price</th>
+            <th scope="col">action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% for (let rom of product.options.roms) {%>
+            <tr>
+                <td>
+                    <%= rom.size %>
+                </td>
+
+                <td>
+                    <%= rom.increase_price %>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-primary">Detail</button>
+                </td>
+            </tr>
+            <% } %>
+    </tbody>
+</table>
+
 
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -40,49 +129,27 @@
             <div class="modal-body">
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                        value="option1" checked>
+                        value="colors">
                     <label class="form-check-label" for="inlineRadio1">Color</label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                        value="option2">
+                        value="rams">
                     <label class="form-check-label" for="inlineRadio2">Ram</label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
-                        value="option3">
+                        value="roms">
                     <label class="form-check-label" for="inlineRadio3">Rom</label>
                 </div>
             </div>
 
-            <form method="post">
-                <div id="colors" class="column option">
-                    <label for="image">image:</label>
-                    <input type="file" class="form-control" id="image" name="image" accept="image/*" required>
-                    <label for="color">color:</label>
-                    <input type="text" id="color" name="color" class="input_option" required>
-                    <label for="increase_price">increase_price:</label>
-                    <input type="number" step="1000" id="increase_price" name="increase_price" class="input_option"
-                        required>
-                </div>
-                <div id="rams" class="column option">
-                    <label for="size">size:</label>
-                    <input type="text" id="size" name="size" class="input_option" required>
-                    <label for="increase_price">increase_price:</label>
-                    <input type="number" step="1000" id="increase_price" name="increase_price" class="input_option"
-                        required>
-                </div>
-                <div id="roms" class="column option">
-                    <label for="size">size:</label>
-                    <input type="text" id="size" name="size" class="input_option" required>
-                    <label for="increase_price">increase_price:</label>
-                    <input type="number" step="1000" id="increase_price" name="increase_price" class="input_option"
-                        required>
-                </div>
+            <form class="option" action="/home/product/option/<%= product._id %>?_method=PUT" method="post"
+                name="insert-option-form" enctype="multipart/form-data">
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Insert</button>
+                <button id="btnInsert" type="button" class="btn btn-primary">Insert</button>
             </div>
         </div>
     </div>
@@ -90,25 +157,205 @@
 
 
 
+
+
 <script>
-    const color = document.getElementById('colors')
-    const ram = document.getElementById('rams')
-    const rom = document.getElementById('roms')
-    document.querySelectorAll('input[name="inlineRadioOptions"]').forEach(element => {
-        element.addEventListener('click', (e) => {
-            if (document.getElementById('option1').checked) {
-                color.style.display = "block"
-                ram.style.display = "none"
-                rom.style.display = "none"
-            } else if (document.getElementById('option2').checked) {
-                color.style.display = "none"
-                ram.style.display = "block"
-                rom.style.display = "none"
+    document.addEventListener('DOMContentLoaded', function () {
+        document.getElementById('inlineRadio1').checked = true
+        var selectedOption = 'colors'
+        const form = document.forms['insert-option-form']
+
+        var imageLabel = document.createElement('label')
+        imageLabel.textContent = 'Image:'
+        form.appendChild(imageLabel)
+
+        var previewImage = document.createElement('img')
+        previewImage.alt = 'Error'
+        previewImage.id = 'preview-image'
+        form.appendChild(previewImage)
+
+        var imageInput = document.createElement('input')
+        imageInput.type = 'file'
+        imageInput.className = 'form-control'
+        imageInput.id = 'image'
+        imageInput.name = 'image'
+        imageInput.accept = 'image/*'
+        imageInput.required = true
+        imageInput.addEventListener('change', previewImage)
+        form.appendChild(imageInput)
+
+
+        var colorLabel = document.createElement('label')
+        colorLabel.textContent = 'Color:'
+        form.appendChild(colorLabel)
+
+        var colorInput = document.createElement('input')
+        colorInput.type = 'text'
+        colorInput.id = 'color'
+        colorInput.name = 'color'
+        colorInput.className = 'input_option'
+        colorInput.required = true
+        form.appendChild(colorInput)
+
+        var increasePriceLabel = document.createElement('label')
+        increasePriceLabel.textContent = 'Increase Price:'
+        form.appendChild(increasePriceLabel)
+
+        var increasePriceInput = document.createElement('input')
+        increasePriceInput.type = 'number'
+        increasePriceInput.step = '1000'
+        increasePriceInput.id = 'increase_price'
+        increasePriceInput.name = 'increase_price'
+        increasePriceInput.className = 'input_option'
+        increasePriceInput.required = true
+        form.appendChild(increasePriceInput)
+
+
+        document.querySelectorAll('input[name="inlineRadioOptions"]').forEach(element => {
+            element.addEventListener('click', (e) => {
+                form.innerHTML = ''
+
+                selectedOption = document.querySelector('input[name="inlineRadioOptions"]:checked').value
+                if (selectedOption === 'colors') {
+
+                    var imageLabel = document.createElement('label')
+                    imageLabel.textContent = 'Image:'
+                    form.appendChild(imageLabel)
+
+                    var previewImage = document.createElement('img')
+                    previewImage.alt = 'Error'
+                    previewImage.id = 'preview-image'
+                    form.appendChild(previewImage)
+
+                    var imageInput = document.createElement('input')
+                    imageInput.type = 'file'
+                    imageInput.className = 'form-control'
+                    imageInput.id = 'image'
+                    imageInput.name = 'image'
+                    imageInput.accept = 'image/*'
+                    imageInput.addEventListener('change', () => showPreviewImage(event))
+                    form.appendChild(imageInput)
+
+
+                    var colorLabel = document.createElement('label')
+                    colorLabel.textContent = 'Color:'
+                    form.appendChild(colorLabel)
+
+                    var colorInput = document.createElement('input')
+                    colorInput.type = 'text'
+                    colorInput.id = 'color'
+                    colorInput.name = 'color'
+                    colorInput.className = 'input_option'
+                    form.appendChild(colorInput)
+
+                    var increasePriceLabel = document.createElement('label')
+                    increasePriceLabel.textContent = 'Increase Price:'
+                    form.appendChild(increasePriceLabel)
+
+                    var increasePriceInput = document.createElement('input')
+                    increasePriceInput.type = 'number'
+                    increasePriceInput.step = '1000'
+                    increasePriceInput.id = 'increase_price'
+                    increasePriceInput.name = 'increase_price'
+                    increasePriceInput.className = 'input_option'
+                    form.appendChild(increasePriceInput)
+
+                } else if (selectedOption === 'rams') {
+
+                    var sizeLabel = document.createElement('label')
+                    sizeLabel.textContent = 'Size:'
+                    form.appendChild(sizeLabel)
+
+                    var sizeInput = document.createElement('input')
+                    sizeInput.type = 'text'
+                    sizeInput.id = 'size'
+                    sizeInput.name = 'size'
+                    sizeInput.className = 'input_option'
+                    form.appendChild(sizeInput)
+
+
+                    var increasePriceLabel = document.createElement('label')
+                    increasePriceLabel.textContent = 'Increase Price:'
+                    form.appendChild(increasePriceLabel)
+
+                    var increasePriceInput = document.createElement('input')
+                    increasePriceInput.type = 'number'
+                    increasePriceInput.step = '1000'
+                    increasePriceInput.id = 'increase_price'
+                    increasePriceInput.name = 'increase_price'
+                    increasePriceInput.className = 'input_option'
+                    form.appendChild(increasePriceInput)
+                } else {
+
+                    var sizeLabel = document.createElement('label')
+                    sizeLabel.textContent = 'Size:'
+                    form.appendChild(sizeLabel)
+
+                    var sizeInput = document.createElement('input')
+                    sizeInput.type = 'text'
+                    sizeInput.id = 'size'
+                    sizeInput.name = 'size'
+                    sizeInput.className = 'input_option'
+                    form.appendChild(sizeInput)
+
+
+                    var increasePriceLabel = document.createElement('label')
+                    increasePriceLabel.textContent = 'Increase Price:'
+                    form.appendChild(increasePriceLabel)
+
+                    var increasePriceInput = document.createElement('input')
+                    increasePriceInput.type = 'number'
+                    increasePriceInput.step = '1000'
+                    increasePriceInput.id = 'increase_price'
+                    increasePriceInput.name = 'increase_price'
+                    increasePriceInput.className = 'input_option'
+                    form.appendChild(increasePriceInput)
+                }
+            })
+        })
+
+
+
+
+
+        const btnInsert = document.getElementById('btnInsert')
+        btnInsert.addEventListener('click', function (event) {
+            event.preventDefault()
+            if (validateForm()) {
+                var newInput = document.createElement('input');
+                newInput.type = 'text'
+                newInput.name = 'options'
+                newInput.value = selectedOption
+                newInput.style.display = 'none'
+                form.appendChild(newInput)
+                form.submit()
+                document.getElementById('inlineRadio1').checked = true
+                selectedOption = 'colors'
             } else {
-                color.style.display = "none"
-                ram.style.display = "none"
-                rom.style.display = "block"
+                alert('Please fill out all required fields.')
             }
-        });
+        })
+
+
+        function validateForm() {
+
+            var requiredFields
+            if (selectedOption === 'colors') {
+                requiredFields = ['image', 'color', 'increase_price']
+            } else {
+                requiredFields = ['size', 'increase_price']
+            }
+
+            for (const fieldId of requiredFields) {
+                const field = document.getElementById(fieldId)
+                if (!field.value) {
+                    return false
+                }
+            }
+            return true
+        }
+
     })
 </script>
+
+<script src="/js/selectedImage.js"></script>
