Chức năng đăng nhập đăng ký

--- a/src/views/product/viewProduct.ejs
+++ b/src/views/product/viewProduct.ejs
@@ -53,7 +53,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
-                <button type="button" class="btn btn-primary" id="btn-delete-product">Contineu</button>
+                <button type="button" class="btn btn-primary" id="btn-delete-product">Continue</button>
             </div>
         </div>
     </div>
