--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -1,50 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
-body{
+body {
     font-family: 'Poppins', sans-serif;
     background: #ececec;
 }
 
 /*------------ Login container ------------*/
 
-.box-area{
+.box-area {
     width: 930px;
 }
 
 /*------------ Right box ------------*/
 
-.right-box{
+.right-box {
     padding: 40px 30px 40px 40px;
 }
 
 /*------------ Custom Placeholder ------------*/
 
-::placeholder{
+::placeholder {
     font-size: 16px;
 }
 
-.rounded-4{
+.rounded-4 {
     border-radius: 20px;
 }
-.rounded-5{
+
+.rounded-5 {
     border-radius: 30px;
 }
 
 
 /*------------ For small screens------------*/
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) {
 
-     .box-area{
+    .box-area {
         margin: 0 10px;
 
-     }
-     .left-box{
+    }
+
+    .left-box {
         height: 100px;
         overflow: hidden;
-     }
-     .right-box{
-        padding: 20px;
-     }
+    }
 
+    .right-box {
+        padding: 20px;
+    }
+
+}
+
+#lable-error {
+    display: none;
+    color: red;
+    font-size: small;
 }
