--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -12,34 +12,34 @@
                 <div class="align-items-center header-text mb-4">
                     <h2>Sign Up</h2>
                 </div>
+                <lable id="lable-error"></lable>
                 <form name="register-form" method="post" action="/user/register">
                     <div class="input-group mb-3">
-                        <input id="email" name="username" type="email"
+                        <input id="email" name="username" type="email" value="<%=email ? email : ''%>"
                             class="form-control form-control-lg bg-light fs-6" placeholder="Email address" required>
                     </div>
 
                     <div class="input-group mb-3">
                         <input id="code" name="code" type="number" class="form-control form-control-lg bg-light fs-6"
-                            placeholder="code" required>
+                        placeholder="code" required>
                         <button id="btn-send" type="button" class="btn btn-outline-primary">Send</button>
                     </div>
 
                     <div class="input-group mb-3">
                         <input name="fullname" type="text" class="form-control form-control-lg bg-light fs-6"
-                            placeholder="Fullname" required>
+                        value="<%=fullname ? fullname : ''%>"   placeholder="Fullname" required>
                     </div>
                     <div class="input-group mb-3">
-                        <input id="pass1" name="password" type="password"
+                        <input id="pass1" name="password" type="password"  value="<%=password ? password : ''%>"
                             class="form-control form-control-lg bg-light fs-6" placeholder="Password" required>
                     </div>
                     <div class="input-group mb-3">
                         <input id="pass2" type="password" class="form-control form-control-lg bg-light fs-6"
-                            placeholder="Repeat password" required>
+                        value="<%=password ? password : ''%>"   placeholder="Repeat password" required>
                     </div>
 
                     <div class="input-group mb-3">
-                        <button id="btn-register" type="submit"
-                            class="btn btn-lg btn-primary w-100 fs-6">Register</button>
+                        <button type="submit" class="btn btn-lg btn-primary w-100 fs-6">Register</button>
                     </div>
                 </form>
 
@@ -58,14 +58,10 @@
     document.addEventListener('DOMContentLoaded', function () {
         const data = "<%=email%>"
         const err = "<%=error%>"
-        if (data) {
-            document.getElementById('email').value = data
-            alert(`Sent otp to email ${data}`)
-        }
-
-        if (err) {
-            alert(`${err}`)
-        }
+        const label = document.getElementById('lable-error')
+        label.textContent = err ? err : data ? `Check mail ${data}` : ''
+        label.style.display = data ? 'block' : err ? ' block' : 'none'
+        label.style.color = err ? ' red' : 'green'
 
         const btnSend = document.getElementById('btn-send')
         const form = document.forms['otp-form']
@@ -77,22 +73,13 @@
             const emailPattern = /^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/
             const isEmail = emailPattern.test(email)
             if (isEmail) {
+                label.style.display = 'none'
                 form.action = `/user/register/send-code/${email}`
                 form.submit()
             } else {
-                alert('Email invalid')
-            }
-        })
-
-        const btnRegister = document.getElementById('btn-register')
-        btnRegister.addEventListener('click', function (event) {
-            event.preventDefault()
-            const pass1 = document.getElementById('pass1').value
-            const pass2 = document.getElementById('pass2').value
-            if (pass1 == pass2) {
-                document.forms['register-form'].submit()
-            } else {
-                alert("Password not correct!")
+                label.textContent = "Email invalid"
+                label.style.display = 'block'
+                label.style.color = 'red'
             }
         })
     })
