--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -2,15 +2,21 @@
   <div class="position-sticky pt-3 sidebar-sticky">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link " aria-current="page" href="/">
+        <a class="nav-link " aria-current="page" href="/home/product">
           <i class="bi bi-house"></i>
-          Home
+          Product
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="/">
+        <a class="nav-link " href="/user">
           <i class="bi bi-patch-question"></i>
-          About
+          User
+        </a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link " href="/bill">
+          <i class="bi bi-patch-question"></i>
+          Bill
         </a>
       </li> 
     
