--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -19,6 +19,13 @@
           Bill
         </a>
       </li> 
+
+      <li class="nav-item">
+        <a class="nav-link " href="/brand">
+          <i class="bi bi-patch-question"></i>
+          Brand
+        </a>
+      </li> 
     
     
 
