--- a/src/views/brand/viewBrand.ejs
+++ b/src/views/brand/viewBrand.ejs
@@ -1,10 +1,10 @@
 <div class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">User</h1>
+    <h1 class="h2">Brand</h1>
     <div class="col-md-3">  
     </div>
     <div class="btn-toolbar mb-2 mb-md 0">
       <div class="btn-group me-2">
-        <a href="/user/insert" class="btn btn-sm btn-outline-secondary">+ New User</a>
+        <a href="/brand/insert" class="btn btn-sm btn-outline-secondary">+ New Brand</a>
       </div>
     </div>
   </div>
@@ -15,32 +15,33 @@
     <table class="table table-striped table-sm">
       <thead>
         <tr>
-          <th scope="col">Full name</th>
-          <th scope="col">Reward points</th>
+          <th scope="col">Name Brand</th>
           <th scope="col">Created at</th>
           <th scope="col" class="text-end">Action</th>
         </tr>
       </thead>
   
       <tbody>
-        <% for (let user of data) {%>
+        <% for (let brand of data) {%>
           <tr class="align-middle">
-            <td><%= user.fullname %></td>
-            <td><%= user.rewardPoints %></td>
-            <td><%= user.time.toLocaleString('en') %></td>
+            <td><%= brand.brand %></td>
+            <td><%= brand.time.toLocaleString('en') %></td>
             <td class="text-end">
   
               <div class="d-flex flex-row justify-content-end gap-2">
 
              
-                <a href="/user/detail/<%= user._id %>" type="button" class="btn btn-primary btn-small">
+                <a href="/brand/detail/<%= brand._id %>" type="button" class="btn btn-primary btn-small">
                   <i class="bi bi-eye"></i>
                 </a>
   
+                <a href="/brand/edit/<%= brand._id %>" type="button" class="btn btn-warning btn-small">
+                  <i class="bi bi-pencil"></i>
+                </a>
                
                <div>
                     <button type="button" class="btn btn-danger btn-small" data-bs-toggle="modal"
-                    data-bs-target="#deleteModal" data-bs-id="<%=user._id%>"> <i class="bi bi-trash"></i></button>
+                    data-bs-target="#deleteModal" data-bs-id="<%=brand._id%>"> <i class="bi bi-trash"></i></button>
                 </div>
               </div>
             </td>
@@ -58,7 +59,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="modalLabel">Delete Product</h1>
+                <h1 class="modal-title fs-5" id="modalLabel">Delete Brand</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -87,7 +88,7 @@
 
         var btn_del = document.getElementById('btn-delete-product')
         btn_del.onclick = function () {
-            deleteForm.action = 'user/delete/' + id + "?_method=DELETE"
+            deleteForm.action = 'brand/delete/' + id + "?_method=DELETE"
             deleteForm.submit()
         }
     });
