--- a/src/views/product/detailProduct.ejs
+++ b/src/views/product/detailProduct.ejs
@@ -17,6 +17,11 @@
         required>
 
     <br>
+    <label for="percent_discount">percent_discount:</label>
+    <input type="number" step="1" id="percent_discount" name="percent_discount" required value=<%= product.percent_discount%>>
+
+
+    <br>
 
     <input class="btn btn-primary" type="submit" value="Update">
 </form>
