--- a/src/views/product/newProduct.ejs
+++ b/src/views/product/newProduct.ejs
@@ -12,7 +12,12 @@
 
 
     <label for="default_price">default_price:</label>
-    <input type="number" step="1000" id="default_price" name="default_price" required>
+    <input type="number" step="1000" id="default_price" name="default_price" value="0" required>
+
+
+    <br>
+    <label for="percent_discount">percent_discount:</label>
+    <input type="number" step="1" id="percent_discount" name="percent_discount" required value="0">
 
 
     <br>
