--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -2,7 +2,7 @@
   <div class="position-sticky pt-3 sidebar-sticky">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link " aria-current="page" href="/home/product">
+        <a class="nav-link " aria-current="page" href="/product">
           <i class="bi bi-house"></i>
           Product
         </a>
