--- a/src/views/product/newVariations.ejs
+++ b/src/views/product/newVariations.ejs
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<form action="/home/product/<%=productId%>/variations/add" method="POST" enctype="multipart/form-data">
+<form action="/product/<%=productId%>/variations/add" method="POST" enctype="multipart/form-data">
 
   <div class="row form-group mb-4">
     <div class="col">
