--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -26,9 +26,15 @@
           Brand
         </a>
       </li> 
-    
-    
 
+      <li class="nav-item">
+        <a class="nav-link " href="/banner">
+          <i class="bi bi-patch-question"></i>
+          Banner
+        </a>
+      </li> 
+    
+    
     </ul>
   </div>
 </nav>
