--- a/src/views/product/newProduct.ejs
+++ b/src/views/product/newProduct.ejs
@@ -1,4 +1,3 @@
-
 <div
   class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
 >
@@ -29,38 +28,64 @@
 <form action="/home/product/add" method="POST">
   <div class="row form-group mb-4">
     <div class="col">
-        <label for="product_name">Product name:</label>
-        <input class="form-control" type="text" id="product_name" name="product_name" required>
+      <label for="product_name">Product name:</label>
+      <input
+        class="form-control"
+        type="text"
+        id="product_name"
+        name="product_name"
+        required
+      />
     </div>
-  </div>
-
-  <div class="row form-group mb-4">
-
-    <div class="col">
-        <label for="brand_name">Brand name:</label>
-        <input class="form-control" type="text" id="brand_name" name="brand_name" required>
-    
-    </div>
-  </div>
-
-  <div class="row form-group mb-4">
-    <div class="col">
-        <label for="default_price">Default price:</label>
-        <input class="form-control" type="number" step="1000" id="default_price" name="default_price" required>
-    </div>
-
-  </div>
   
+    <div class="col">
+      <label style="margin: 5px;" for="lastName">Brand</label>
+      <select id="brand_name" name="brand_name" class="form-select">
+        <% for(var i=0; i <arrBrand.length; i++) { %>
+          <option value="<%= arrBrand[i].brand %>">
+            <%= arrBrand[i].brand %>
+          </option>
+          <%}%>
+      </select>
+    </div>
+  </div>
+
   <div class="row form-group mb-4">
     <div class="col">
-     <label for="percent_discount">percent_discount:</label>
-    <input type="number" step="1" id="percent_discount" name="percent_discount" required value="0">
-
+      <label for="default_price">Price:</label>
+      <input
+        class="form-control"
+        type="number"
+        step="1000"
+        id="price"
+        name="price"
+        required
+      />
+    </div>
+    <div class="col">
+      <label for="default_price">Discount:</label>
+      <input
+        class="form-control"
+        type="number"
+        id="percent_discount"
+        name="percent_discount"
+        required
+      />
+    </div>
   </div>
 
+  <div class="row form-group mb-4">
+    <div class="col">
+      <label for="default_price">Rom:</label>
+      <input class="form-control" type="text" id="rom" name="rom" required />
+    </div>
+    <div class="col">
+      <label for="default_price">Ram:</label>
+      <input class="form-control" type="text" id="ram" name="ram" required />
+    </div>
   </div>
+
   <div class="form-group mb-4">
     <button type="submit" class="btn btn-primary">Add Product</button>
   </div>
 </form>
-
