--- a/src/views/product/add_op.ejs
+++ b/src/views/product/add_op.ejs
@@ -42,19 +42,31 @@
           required
         />
       </div>
-  <div class="col">
-    <label for="lastName">Price</label>
-    <input
-      type="number"
-      class="form-control"
-      id="price"
-      name="price"
-      placeholder="Price"
-      required
-    />
-  </div>
+      <div class="col">
+        <label for="tel">Ram</label>
+        <input
+          type="text"
+          class="form-control"
+          id="ram"
+          name="ram"
+          placeholder="Ram"
+          required
+        />
+      </div>
+ 
   </div>
   <div class="row form-group mb-4" >
+    <div class="col">
+      <label for="lastName">Price</label>
+      <input
+        type="number"
+        class="form-control"
+        id="price"
+        name="price"
+        placeholder="Price"
+        required
+      />
+    </div>
   <div class="col">
     <label for="default_price">Discount:</label>
     <input
