cập nhật giao diện

--- a/src/views/product/newProduct.ejs
+++ b/src/views/product/newProduct.ejs
@@ -1,4 +1,3 @@
-
 <div class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
 
   <h1 class="h2">Product</h1>
@@ -31,7 +30,7 @@
     <div class="col">
 
       <label for="product_type">Chọn loại sản phẩm:</label>
-      <select id="product_type" name="product_type">
+      <select class="form-control" id="product_type" name="product_type">
         <option value="Điện thoại">Điện thoại</option>
         <option value="Phụ kiện">Phụ kiện</option>
 
@@ -42,7 +41,7 @@
   <div class="row form-group mb-4">
     <div class="col">
 
-      <label for="product_name">Product name:</label>
+      <label for="product_name">Tên sản phẩm:</label>
       <input class="form-control" type="text" id="product_name" name="product_name" required>
     </div>
   </div>
@@ -50,16 +49,18 @@
   <div class="row form-group mb-4">
 
     <div class="col">
-
-      <label for="brand_name">Brand name:</label>
-      <input class="form-control" type="text" id="brand_name" name="brand_name" required>
-
+      <label for="brand_name">Chọn hãng sản phẩm:</label>
+      <select class="form-control"  id="brand_name" name="brand_name">
+        <% for(let i=0; i < brand.length; i++) { %>
+          <option><%= brand[i].brand %></option>
+        <% } %>
+      </select>
     </div>
   </div>
 
   <div class="row form-group mb-4">
     <div class="col">
-      <label for="percent_discount">Percent_discount:</label>
+      <label for="percent_discount">Phần trăm giảm giá:</label>
       <input class="form-control" type="number" step="1" id="percent_discount" name="percent_discount" value="0"
         required>
     </div>
@@ -68,6 +69,6 @@
 
 
   <div class="form-group mb-4">
-    <button type="submit" class="btn btn-primary">Add Product</button>
+    <button type="submit" class="btn btn-primary">Thêm sản phẩm</button>
   </div>
 </form>
