--- a/src/views/product/newVariations.ejs
+++ b/src/views/product/newVariations.ejs
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2">Variations</h1>
+  <h1 class="h2">Biến thể sản phẩm</h1>
   <div class="btn-toolbar mb-2 mb-md 0">
     <div class="btn-group me-2">
       <button class="btn btn-sm btn-outline-secondary">?</button>
@@ -12,13 +12,13 @@
     <div class="col">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/product/<%=productId%>/variations">Variations</a></li>
-          <li class="breadcrumb-item active">New Variations</li>
+          <li class="breadcrumb-item"><a href="/product/<%=productId%>/variations">Biến thể</a></li>
+          <li class="breadcrumb-item active">Biến thể mới</li>
         </ol>
       </nav>
     </div>
     <div class="col text-end fw-lighter">
-      <b>Product</b>
+      <b>Biến thể</b>
     </div>
   </div>
 </div>
@@ -33,7 +33,7 @@
 
   <div class="row form-group mb-4">
     <div class="col">
-      <label for="product_name">image:</label>
+      <label for="product_name">Hình ảnh:</label>
       <input type="file" class="form-control" name="image" id="image" onchange="showPreviewImage(event)" required>
     </div>
   </div>
@@ -41,7 +41,7 @@
   <div class="row form-group mb-4">
 
     <div class="col">
-      <label for="color">color:</label>
+      <label for="color">Màu sắc:</label>
       <input class="form-control" type="text" id="color" name="color" required>
 
     </div>
@@ -49,36 +49,54 @@
 
   <div class="row form-group mb-4">
     <div class="col">
-      <label for="ram">ram:</label>
-      <input class="form-control" type="text" id="ram" name="ram" required>
-    </div>
 
+      <label for="ram">Chọn loại ram:</label>
+      <select class="form-control" id="ram" name="ram">
+        <option value="2GB">2GB</option>
+        <option value="3GB">3GB</option>
+        <option value="4GB">4GB</option>
+        <option value="6GB">6GB</option>
+        <option value="8GB">8GB</option>
+        <option value="10GB">10GB</option>
+        <option value="12GB">12GB</option>
+        <option value="16GB">16GB</option>
+      </select>
+    </div>
   </div>
 
 
   <div class="row form-group mb-4">
     <div class="col">
-      <label for="rom">rom:</label>
-      <input class="form-control" type="text" id="rom" name="rom" required>
-    </div>
 
+      <label for="rom">Chọn loại rom:</label>
+      <select class="form-control" id="rom" name="rom">
+        <option value="16GB">16GB</option>
+        <option value="32GB">32GB</option>
+        <option value="64GB">64GB</option>
+        <option value="128GB">128GB</option>
+        <option value="256GB">256GB</option>
+        <option value="512GB">512GB</option>
+        <option value="1T">1T</option>
+      </select>
+    </div>
   </div>
+
 
   <div class="row form-group mb-4">
     <div class="col">
-      <label for="quantity">quantity:</label>
+      <label for="quantity">Số lượng:</label>
       <input class="form-control" type="text" id="quantity" name="quantity" required>
     </div>
   </div>
 
   <div class="row form-group mb-4">
     <div class="col">
-      <label for="price">price:</label>
+      <label for="price">Giá tiền:</label>
       <input class="form-control" type="text" id="price" name="price" required>
     </div>
   </div>
 
   <div class="form-group mb-4">
-    <button type="submit" class="btn btn-primary">Add Product</button>
+    <button type="submit" class="btn btn-primary">Thêm mới</button>
   </div>
 </form>
